[package]
name = "dust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
dust-networking = { path = "../dust-networking" }
dust-game = { path = "../dust-game" }
log = "0.4"
simplelog = "0.11"
anyhow = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio-util = { version = "0.6", features = ["full"] }
futures = "0.3"
