[package]
name = "dust-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
dust-game = { path = "../dust-game" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
