[package]
name = "dust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = "0.14"
dust-protocol = { path = "../dust-protocol" }
dust-game = { path = "../dust-game" }
bincode = "1.3"
log = "0.4"
simplelog = "0.11"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
