[package]
name = "dust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
dust-networking = { path = "../dust-networking" }
dust-game = { path = "../dust-game" }
bincode = "1.3"
log = "0.4"
simplelog = "0.11"
anyhow = "1"
bytes = "1.1"
serde = "1.0"
